--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+:root{
+  --ubuntu-font: 'Ubuntu', sans-serif;
+  --source-sans-font: 'Source Sans Pro', sans-serif;
+  --bebase-neue: 'Bebas Neue', cursive;
+
+  --header-color: #00cec9;
+  --subheader-color: #fff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    height: 100vh;
+    -moz-osx-font-smoothing: grayscale;
+    background: #2C3A47;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+@media (max-width:768px){
+  html{
+    font-size: 50%;
+  }
 }
