--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,300&display=swap');
 
 :root{
   --ubuntu-font: 'Ubuntu', sans-serif;
   --source-sans-font: 'Source Sans Pro', sans-serif;
   --bebase-neue: 'Bebas Neue', cursive;
+  --titllium-ital: 'Titillium Web', sans-serif;
 
-  --header-color: #00cec9;
+  --header-color: #00d8d6;
   --subheader-color: #fff;
 }
 
