--- a/src/components/styles/Home/Home.css
+++ b/src/components/styles/Home/Home.css
@@ -1,13 +1,14 @@
 .home-container{
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
 }
 
 .home-container .intro-container{
     display: flex;
     flex-direction: column;
     justify-content: start;
-    padding: 10rem 10rem;
+    padding: 15rem 5rem;
+    width: 60%;
 }
 
 .home-container .intro-container .intro-text{
@@ -23,5 +24,23 @@
 }
 
 .home-container .intro-image{
-    
+    position: relative;
+    width: 40%;
+    height: 80vh;
+}
+
+.home-container .intro-image .splash{
+    position: absolute;   
+    object-fit: contain;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.home-container .intro-image .profile-pic{
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    object-fit: contain;
+    height: 100%;
 }
