--- a/src/components/styles/Home/Home.css
+++ b/src/components/styles/Home/Home.css
@@ -44,3 +44,18 @@
     object-fit: contain;
     height: 100%;
 }
+
+@media (max-width: 650px){
+    .home-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .home-container .intro-image{
+        height: 40vh; width: 100%;
+    }
+    .home-container .intro-container{
+        padding: 1rem 1rem;
+        width: 100%;
+        text-align: center;
+    }
+}
