--- a/src/components/styles/Project/Project.css
+++ b/src/components/styles/Project/Project.css
@@ -25,6 +25,17 @@
     color: var(--header-color);
 }
 
+.mini-project-header{
+    font-size: 5rem;
+    font-family: var(--source-sans-font);
+    color: var(--subheader-color);;
+    text-align: center;
+}
+
+.mini-project-header span{
+    color: var(--header-color);
+}
+
 .project-container{
     display: flex;
     flex-wrap: wrap;
