Added new background

--- a/src/components/styles/Home/Home.css
+++ b/src/components/styles/Home/Home.css
@@ -1,6 +1,7 @@
 .home-container{
     display: flex;
     justify-content: space-between;
+    padding-top: 10rem;
 }
 
 .home-container .intro-container{
